Organização de Modulos

--- a/notebooks/Modulo_2-POO/Exercicios/projetofinal_grupo6_modulo2.ipynb
+++ b/notebooks/Modulo_2-POO/Exercicios/projetofinal_grupo6_modulo2.ipynb
@@ -77,14 +77,9 @@
     "        # atributos do método construtor\n",
     "        self.nome = nome\n",
     "        self.apartamento = apartamento\n",
-    "        self.cpf=cpf\n",
+    "        self.cpf = cpf\n",
     "    \n",
-    "    def __repr__(self): \n",
-    "        '''\n",
-    "        Método para representação do objeto da classe Morador\n",
-    "\n",
-    "        '''\n",
-    "        \n",
+    "    def __repr__(self): #Método para representação do objeto da classe Morador\n",
     "        return f'Nome: {self.nome}\\nApartamento: {self.apartamento}\\nCPF: {self.cpf}'"
    ]
   },
@@ -126,8 +121,8 @@
     "        identificador : int\n",
     "            O número de identificação do candidato\n",
     "        '''\n",
-    "        self.votos=0\n",
-    "        self.identificador=0\n",
+    "        self.votos = 0\n",
+    "        self.identificador = 0\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return f\"{self.nome}\"\n",
@@ -142,7 +137,7 @@
     "            Número de identificação, a ser dado pelo objeto da classe Urna\n",
     "\n",
     "        '''\n",
-    "        self.identificador=numero_urna"
+    "        self.identificador = numero_urna"
    ]
   },
   {
@@ -179,20 +174,14 @@
     "        \n",
     "        self.numero_ap = numero_ap\n",
     "        self.__registrou_voto = False \n",
-    "        self.lista_moradores=[]\n",
+    "        self.lista_moradores = []\n",
     "        \n",
     "\n",
     "    def mostra_moradores(self):\n",
-    "        '''\n",
-    "        Método para mostrar a lista de moradores de um Apartamento\n",
-    "        '''     \n",
     "        for i in range (len(self.lista_moradores)):\n",
     "            print (self.lista_moradores[i])               \n",
     "            \n",
     "    def __repr__(self):\n",
-    "        '''\n",
-    "        Método representar um determinado objeto da Classe Apartamento\n",
-    "        '''  \n",
     "        return f\"Apartamento {self.numero_ap} - Moradores: {self.lista_moradores}\"\n",
     "        \n",
     "    def incluir_novo_morador(self, novo_morador): \n",
@@ -207,16 +196,10 @@
     "        self.lista_moradores.append(novo_morador)\n",
     "\n",
     "    def registra_voto(self):\n",
-    "        '''\n",
-    "        Método indicar se o Apartamento votou ou nao\n",
-    "        '''\n",
-    "        self.__registrou_voto=True\n",
+    "        self.__registrou_voto = True\n",
     "\n",
     "    @property\n",
     "    def registrou_voto(self):\n",
-    "        '''\n",
-    "        Setter do Metodo registra_voto\n",
-    "        '''\n",
     "        return self.__registrou_voto\n"
    ]
   },
@@ -324,7 +307,7 @@
     "            self.lista_candidatos_votos.update({candidato:self.lista_candidatos[candidato].votos})\n",
     "        self.lista_votos_totais()\n",
     "        self.mostra_vencedor() \n",
-    "        "
+    "        # return f\"{self.lista_votos_totais()} \\n{self.mostra_vencedor()}\""
    ]
   },
   {
@@ -912,7 +895,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -926,7 +909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
